[gd_scene load_steps=16 format=2]

[ext_resource path="res://imgs/atlas.png" type="Texture" id=1]
[ext_resource path="res://scenes/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://imgs/make more/make_more_heads7_02.png" type="Texture" id=3]
[ext_resource path="res://imgs/make more/make_more_legs1_06.png" type="Texture" id=4]
[ext_resource path="res://imgs/make more/make_more_hands2_14.png" type="Texture" id=5]
[ext_resource path="res://imgs/make more/make_more_bodies7_02.png" type="Texture" id=6]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item; 
render_mode unshaded; 

uniform float width : hint_range(0.0, 16.0); 
uniform vec4 outline_color : hint_color;

uniform sampler2D textureName;
uniform vec2 textureName_size;

void fragment() 
{ 
	//vec2 size = vec2(width) / vec2(textureSize(TEXTURE, 0)); 
	vec2 size = vec2(width) / vec2(textureName_size); 
	
	vec4 sprite_color = texture(TEXTURE, UV); 
	
	float alpha = sprite_color.a; 
	alpha += texture(TEXTURE, UV + vec2(0.0, -size.y)).a; 
	alpha += texture(TEXTURE, UV + vec2(size.x, -size.y)).a; 
	alpha += texture(TEXTURE, UV + vec2(size.x, 0.0)).a; 
	alpha += texture(TEXTURE, UV + vec2(size.x, size.y)).a; 
	alpha += texture(TEXTURE, UV + vec2(0.0, size.y)).a; 
	alpha += texture(TEXTURE, UV + vec2(-size.x, size.y)).a; 
	alpha += texture(TEXTURE, UV + vec2(-size.x, 0.0)).a; 
	alpha += texture(TEXTURE, UV + vec2(-size.x, -size.y)).a; 
	
	vec3 final_color = mix(outline_color.rgb, sprite_color.rgb, sprite_color.a); 
	COLOR = vec4(final_color, clamp(alpha, 0.0, 1.0)); 
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/width = 0.0
shader_param/outline_color = Color( 0, 0, 0, 0 )
shader_param/textureName_size = Vector2( 177, 266 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 14, 5, 177, 266 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 69.0
height = 130.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 100, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 420, 120, 63, 60 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 20, 420, 60, 60 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 327, 167, 26, 26 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 404, 250, 32, 20 )

[node name="Player" type="KinematicBody2D"]
material = SubResource( 7 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
material = SubResource( 7 )
position = Vector2( 0, -106.667 )
scale = Vector2( 1, 1.00564 )
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -133.333 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -133.333 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="back" type="Node2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -70 )
scale = Vector2( 1.79597, 1.79597 )

[node name="head" type="Sprite" parent="back"]
position = Vector2( 0, -64.9601 )
texture = SubResource( 8 )

[node name="body" type="Sprite" parent="back"]
texture = SubResource( 9 )

[node name="hands" type="Node2D" parent="back"]
scale = Vector2( 1, 1 )

[node name="hand" type="Sprite" parent="back/hands"]
position = Vector2( -44.544, 14.848 )
scale = Vector2( 1, 1 )
texture = SubResource( 10 )

[node name="hand2" type="Sprite" parent="back/hands"]
position = Vector2( 44.5441, 14.848 )
scale = Vector2( 1, 1 )
texture = SubResource( 10 )

[node name="legs" type="Node2D" parent="back"]

[node name="leg2" type="Sprite" parent="back/legs"]
position = Vector2( 14.848, 44.5441 )
scale = Vector2( 1, 1 )
texture = SubResource( 11 )

[node name="leg" type="Sprite" parent="back/legs"]
position = Vector2( -14.848, 44.5441 )
scale = Vector2( 1, 1 )
texture = SubResource( 11 )

[node name="front" type="Node2D" parent="."]
position = Vector2( 0, -70 )
scale = Vector2( 1.79597, 1.79597 )

[node name="head" type="Sprite" parent="front"]
position = Vector2( 0, -64.9601 )
texture = SubResource( 8 )

[node name="body" type="Sprite" parent="front"]
texture = SubResource( 9 )

[node name="hands" type="Node2D" parent="front"]
scale = Vector2( 1, 1 )

[node name="hand" type="Sprite" parent="front/hands"]
position = Vector2( -44.544, 14.848 )
scale = Vector2( 1, 1 )
texture = SubResource( 10 )

[node name="hand2" type="Sprite" parent="front/hands"]
position = Vector2( 44.5441, 14.848 )
scale = Vector2( 1, 1 )
texture = SubResource( 10 )

[node name="legs" type="Node2D" parent="front"]

[node name="leg2" type="Sprite" parent="front/legs"]
position = Vector2( 14.848, 44.5441 )
scale = Vector2( 1, 1 )
texture = SubResource( 11 )

[node name="leg" type="Sprite" parent="front/legs"]
position = Vector2( -14.848, 44.5441 )
scale = Vector2( 1, 1 )
texture = SubResource( 11 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
